--- a/index.html
+++ b/index.html
@@ -479,6 +479,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 
 <ul>
 <li><a href="https://www.linkedin.com/in/jarkkomoilanen/">Jarkko Moilanen</a></li>
+<li><a href="https://www.linkedin.com/in/manfred-sorg/">Manfred Sorg</a></li>
 </ul>
 
 <p><strong>Participate:</strong></p>
