--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <p>The <code>productStrategy</code> object captures the business intent behind a data product, enabling alignment between product specifications and organizational goals. It defines the objectives, success metrics (<code>KPIs</code>), and strategic alignment relevant to the product. This metadata can be used to trace value creation, measure performance, and communicate the product’s purpose to internal stakeholders, external consumers, and AI agents.</p>
 
 <p>By embedding business logic directly into the product specification, <code>productStrateg</code>y helps ensure that data products are not only technically sound but also strategically impactful.</p>
-
+<h2 id='optional-attributes-and-elements'>Optional attributes and elements</h2>
 <blockquote>
 <p>Example of product strategy and KPIs usage:</p>
 </blockquote>
@@ -927,7 +927,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
         <span class="na">unit</span><span class="pi">:</span> <span class="s">seconds</span>
     <span class="na">strategicAlignment</span><span class="pi">:</span>
       <span class="pi">-</span> <span class="na">en</span><span class="pi">:</span> <span class="s">Smart City Vision </span><span class="m">2030</span>
-</code></pre></div><h2 id='optional-attributes-and-elements'>Optional attributes and elements</h2>
+</code></pre></div>
 <table><thead>
 <tr>
 <th><div style="width:180px">Element name</div></th>
