--- a/index.html
+++ b/index.html
@@ -903,10 +903,13 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <h1 id='data-product-strategy'>Data Product Strategy</h1>
 <p>The <code>productStrategy</code> object captures the business intent behind a data product and links it to a <strong>single higher-level business KPI</strong> it is primarily accountable for. It defines the objectives, the primary KPI at the business level, and the <strong>product-level KPIs</strong> that measure its direct contribution.</p>
 
-<p>Optionally, it can also include <strong>related KPIs</strong> — secondary or cross-unit measures that:
-1. <strong>Capture additional value</strong> — show extra benefits beyond the main KPI, useful for demonstrating broader impact.
-2. <strong>Track side effects</strong> — monitor unintended positive or negative impacts on other KPIs.
-3. <strong>Highlight cross-department value</strong> — reveal benefits for other business units, strengthening prioritization and funding cases.</p>
+<p>Optionally, it can also include <strong>related KPIs</strong> — secondary or cross-unit measures that:</p>
+
+<ol>
+<li><strong>Capture additional value</strong> — show extra benefits beyond the main KPI, useful for demonstrating broader impact.</li>
+<li><strong>Track side effects</strong> — monitor unintended positive or negative impacts on other KPIs.</li>
+<li><strong>Highlight cross-department value</strong> — reveal benefits for other business units, strengthening prioritization and funding cases.</li>
+</ol>
 
 <p>By embedding both primary and related KPI connections directly into the product specification, <code>productStrategy</code> ensures that data products remain technically sound, strategically aligned, and transparent in how they deliver value.</p>
 <h2 id='attributes-and-options'>Attributes and options</h2>
