--- a/index.html
+++ b/index.html
@@ -911,6 +911,13 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <li><strong>Highlight cross-department value</strong> — reveal benefits for other business units, strengthening prioritization and funding cases.</li>
 </ol>
 
+<p>Beyond KPIs, <code>productStrategy</code> can include:</p>
+
+<ul>
+<li><strong>objectives</strong> — natural-language statements describing the business outcomes the product supports.</li>
+<li><strong>strategicAlignment</strong> — references to corporate initiatives, programs, or policy documents that the product contributes to (e.g., Smart City Vision 2030).</li>
+</ul>
+
 <p>By embedding both primary and related KPI connections directly into the product specification, <code>productStrategy</code> ensures that data products remain technically sound, strategically aligned, and transparent in how they deliver value.</p>
 <h2 id='attributes-and-options'>Attributes and options</h2>
 <blockquote>
