--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 
 <ul>
 <li><p><a href="https://github.com/Open-Data-Product-Initiative/dev/issues">Raise an issue in Github</a></p></li>
-<li><p><a href="https://discord.gg/ZZHm5cfy">Join ODPS Discord Server</a> </p></li>
+<li><p><a href="https://discord.gg/3EjQf3CD46">Join ODPS Discord Server</a></p></li>
 </ul>
 <h2 id='introduction'>Introduction</h2>
 <p>The Open Data Product Specification is a vendor-neutral, open-source machine-readable data product metadata model. It defines the objects and attributes as well as the structure of digital data products. The work is based on existing standards (schema.org), best practices and emerging concepts like Data Mesh. The reasoning is that we reuse and proudly copy instead of reinventing the wheel. More detailed information of the origin can be found from the <a href="http://www.opendataproducts.org">Open Data Product Specification homepage</a>. </p>
@@ -589,7 +589,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 
 <p>If you see something missing, described inaccurately or plain wrong, or you want to comment the specification, <a href="https://github.com/Open-Data-Product-Initiative/dev/issues">raise an issue in Github</a></p>
 
-<p>Be part of the ODPS community! Share your challenges and shape the future of data products on our <a href="https://discord.gg/ZZHm5cfy">Discord</a> </p>
+<p>Be part of the ODPS community! Share your challenges and shape the future of data products on our <a href="https://discord.gg/3EjQf3CD46">Discord</a></p>
 <h2 id='documentation-structure'>Documentation structure</h2>
 <p><strong>LEFT COLUMN: Navigation</strong></p>
 
